--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+    div#searchDiv
+            form.search-form
+              input.search-box(name="q", type="text", placeholder="Search video Content", value="", required="required")
