--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,7 @@
-extends layout
+h1= title
+p
+     Welcome to #{title}
+p
+    a(href="/mainPage") Go forward
 
-block content
-  h1= title
-  p Welcome to #{title}
-    div#searchDiv
-            form.search-form
-              input.search-box(name="q", type="text", placeholder="Search video Content", value="", required="required")
+
