--- a/views/search.pug
+++ b/views/search.pug
@@ -5,10 +5,12 @@ block content
 		div#searchMain
 			each link in links
 				div.videofetch.col-xs-12(style="background-color:#CFCECD;margin-bottom:10px;padding:0px")
+						div.showVideoMeta.col-xs-1(style="padding:0px;")
+							a(href="/", class="fa fa-home", aria-hidden="true")
 						div.videoResult.col-xs-2(style="padding:0px;")
 							img.className#IdName(src=link.thumbnail alt="Image Title")
-						div.videoTitle.col-xs-8(style="padding-left:0px")
-							a(style='line-height:50px;font-size:20px;text-align:justify;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId) #{link.title}
+						div.videoTitle.col-xs-7(style="padding-left:0px")
+							a(style='line-height:50px;font-size:20px;text-align:justify;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
 							br
 						div.dropdown.col-xs-1(style="margin-top:25px")
 							span.transcriptloader
