--- a/views/search.pug
+++ b/views/search.pug
@@ -1,21 +1,19 @@
 extends layout
 	
 block content
-		h1(style="margin-bottom:50px;margin-top:5px") Search Results:
+		h1(style="margin-bottom:50px;margin-top:5px") Search Results for #{term}
 		div#searchMain
 			each link in links
 				div.videofetch.col-xs-12(style="background-color:#CFCECD;margin-bottom:10px;padding:0px")
-						div.showVideoMeta.col-xs-1(style="padding:0px;")
-							a(href="/", class="fa fa-home", aria-hidden="true")
 						div.videoResult.col-xs-2(style="padding:0px;")
 							img.className#IdName(src=link.thumbnail alt="Image Title")
 						div.videoTitle.col-xs-7(style="padding-left:0px")
-							a(style='line-height:50px;font-size:20px;text-align:justify;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
+							a(style='line-height:50px;font-size:20px;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
 							br
 						div.dropdown.col-xs-1(style="margin-top:25px")
 							span.transcriptloader
 								-var videoId=link.videoId
-								button.btn.btn-info(onClick="showTranscript('"+link.videoId+"')") Get Transcript
+								button.btn.btn-info(onClick="showTranscript('"+link.videoId+"')") Show Details
 						| &nbsp
 						-var transcriptDiv = "viewMore-"+link.videoId;
 						div.col-xs-12.hide.viewMore(id=transcriptDiv)
@@ -27,7 +25,9 @@ block content
 										input(type='text',placeholder='Search in transcript',name='search_query')
 										input(type='submit',value='Search')
 								p #{link.transcript}
-							div.entities.col-xs-4(style="margin-top:30px")
+							div.iframe.col-xs-4(style="margin-top:20px")
+								iframe(width='560', height='315', src='https://www.youtube.com/embed/'+link.videoId, frameborder='0')
+							div.entities.col-xs-12(style="margin-top:30px")
 							p(style="font-weight:bold") ENTITIES
 								each tag in link.entities
 									li #{tag}
