--- a/views/search.pug
+++ b/views/search.pug
@@ -17,11 +17,11 @@ block content
 						| &nbsp
 						-var transcriptDiv = "viewMore-"+link.videoId;
 						div.col-xs-12.hide.viewMore(id=transcriptDiv)
-							div.SearchTrans.col-xs-3(style="float:right;padding:0px;")
-								form(action="/search",method="post")
-									p
-										label Enter Keyword(s) :
-										input(type='text',placeholder='Search in transcript',name='search_query')
-										input(type='submit',value='Search')
-							div.transcript.col-xs-12
+							div.SearchTrans.col-xs-4(style="float:right;padding:0px;")
+								p
+									label Enter Keyword(s) :
+									input(type='text',id="search-"+link.videoId,placeholder='Search in transcript',name='search_query',style="padding:5px")
+									button.btn.btn-info(onClick="highlightWord('"+link.videoId+
+									"')",style="display:inline;margin:5px;") Search
+							div.transcript.col-xs-12(id="transcript-"+link.videoId)
 								p #{link.transcript}
