--- a/views/search.pug
+++ b/views/search.pug
@@ -1,6 +1,8 @@
 extends layout
 	
 block content
+		a(href='/')
+			i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
 		h1(style="margin-bottom:50px;margin-top:5px") Search Results for #{term}
 		div#searchMain
 			each link in links
