--- a/views/search.pug
+++ b/views/search.pug
@@ -6,8 +6,8 @@ block content
 		h1(style="margin-bottom:50px;margin-top:5px") Search Results for #{term}
 		div#searchMain
 			each link in links
-				div.videofetch.col-xs-12(style="background-color:#CFCECD;margin-bottom:10px;padding:0px")
-						div.videoResult.col-xs-2(style="padding:0px;margin-left:60px")
+				div.videofetch.col-xs-12(style="background-color:#D3D3D3;margin-bottom:10px;padding:0px")
+						div.videoResult.col-xs-2(style="padding:0px")
 							img.className#IdName(src=link.thumbnail alt="Image Title")
 						div.videoTitle.col-xs-7(style="padding-left:0px")
 							a(style='line-height:50px;font-size:20px;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
