Added link to the tag, shows videos related to tag when clicked

--- a/views/search.pug
+++ b/views/search.pug
@@ -33,4 +33,5 @@ block content
 							div.entities.col-xs-12
 								p(style="font-weight:bold") ENTITIES
 								each tag in link.entities
-									li.col-xs-3 #{tag}
+									a(href='/searchVideoByTag/'+tag)
+										li.col-xs-3 #{tag}
