--- a/views/videoInfo.pug
+++ b/views/videoInfo.pug
@@ -1,23 +1,27 @@
 extends layout
 	
 block content
-	a(href='/')
-		i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
-	h1 VIDEO INFO
-	div.videoTitle.col-xs-7(style="padding-left:0px")
-		a(style='line-height:50px;font-size:20px;color:#000000;margin-left:5px;text-decoration:none')(href="https://www.youtube.com/watch?v="+data.videoId target="_blank") #{data.title}
-	div.iframe.col-xs-offset-1.col-xs-6(style="margin-top:20px")
-		iframe(width='560', height='315', src='https://www.youtube.com/embed/'+data.videoId, frameborder='0')
-	div.transcript.col-xs-12
-		div.SearchTrans.col-xs-4(style="float:right;padding:0px;")
-			p
-				label Enter Keyword(s) :
-				input(type='text',id="search-"+data.videoId,placeholder='Search in transcript',name='search_query',style="padding:5px")
-				button.btn.btn-info(onClick="highlightWord('"+data.videoId+
-				"')",style="display:inline;margin:5px;") Search
-		div.transcript.col-xs-12(id="transcript-"+data.videoId)
-			p #{data.transcript}
-	div.entities.col-xs-12
-		p(style="font-weight:bold") ENTITIES
-		each tag in data.entities
-			li.col-xs-3 #{tag}
+		div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
+			a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
+				i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
+			h1.col.xs-10 Youtube Entity Extraction	
+		h3(style="margin-bottom:30px;margin-top:100px;margin-left:50px;") Search Results for #{term} :
+		div#outerDiv(style="margin-left:50px,margin-right:50px")
+			h3.col-xs-6 VIDEO INFO
+			div.videoTitle.col-xs-7(style="padding-left:0px")
+				a(style='line-height:50px;font-size:20px;color:#000000;text-decoration:none')(href="https://www.youtube.com/watch?v="+data.videoId target="_blank") #{data.title}
+			div.iframe.col-xs-offset-1.col-xs-6(style="margin-top:20px")
+				iframe(width='560', height='315', src='https://www.youtube.com/embed/'+data.videoId, frameborder='0')
+			div.transcript.col-xs-12
+				div.SearchTrans.col-xs-4(style="float:right;padding:0px;")
+					p
+						label Enter Keyword(s) :
+						input(type='text',id="search-"+data.videoId,placeholder='Search in transcript',name='search_query',style="padding:5px")
+						button.btn.btn-info(onClick="highlightWord('"+data.videoId+
+						"')",style="display:inline;margin:5px;") Search
+				div.transcript.col-xs-12(id="transcript-"+data.videoId)
+					p #{data.transcript}
+			div.entities.col-xs-12
+				p(style="font-weight:bold") ENTITIES
+				each tag in data.entities
+					li.col-xs-3 #{tag}
