--- a/views/videoInfo.pug
+++ b/views/videoInfo.pug
@@ -5,10 +5,9 @@ block content
 			a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
 				i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
 			h1.col.xs-10 Youtube Entity Extraction	
-		h3(style="margin-bottom:30px;margin-top:100px;margin-left:50px;") Search Results for #{term} :
-		div#outerDiv(style="margin-left:50px,margin-right:50px")
-			h3.col-xs-6 VIDEO INFO
-			div.videoTitle.col-xs-7(style="padding-left:0px;margin-left:50px")
+		div#outerDiv(style="margin-left:50px;margin-right:50px;margin-top:100px")
+			h3.col-xs-6(style="padding-left:0px;") VIDEO INFO
+			div.videoTitle.col-xs-7(style="padding-left:0px;")
 				a(style='line-height:50px;font-size:20px;color:#000000;text-decoration:none')(href="https://www.youtube.com/watch?v="+data.videoId target="_blank") #{data.title}
 			div.iframe.col-xs-offset-1.col-xs-6(style="margin-top:20px")
 				iframe(width='560', height='315', src='https://www.youtube.com/embed/'+data.videoId, frameborder='0')
