--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -3,11 +3,11 @@ extends layout
 block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
 		h1 Youtube Entity Extraction
-	h3(style="margin-left:25px;margin-top:100px") Search For Videos, Tags Or Transcript:
+	h3(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
 	div.searchpanel.col-xs-12(style="margin-bottom:40px;")
 		form.search-form.col.xs-12(action="/search", method="post",style="margin-left:25px")
 			span.col.xs-12
-				input.search-box.form-control.typeahead.col-xs-11(type="text", placeholder="Search For Videos", value=search_query, required="required" name='search_query',style="width:50%;")
+				input.search-box.form-control.typeahead.col-xs-11(type="text", placeholder="Search For Tags or Transcript", value=search_query, required="required" name='search_query',style="width:50%;")
 				| &nbsp;
 				input.col-xs-1(type="submit", value="Search",style="padding:5px;")
 				i.fa.fa-times(aria-hidden='true')(style="font-size: 20px;left: -140px;position: relative;top: 5px;")(onClick="clearSearchText()")
