--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
-		h1 Youtube Entity Extraction
+		a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
+			i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
+		h1.col.xs-10 Youtube Entity Extraction
 	h3(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
 	div.searchpanel.col-xs-12(style="margin-bottom:40px;")
 		form.search-form.col.xs-12(action="/search", method="post",style="margin-left:25px")
@@ -24,4 +26,4 @@ block content
 		each video in videos
 			span.col-xs-2
 				a(href='/showVideo/'+video.videoId)
-					img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:cover;width:200px;height:150px;margin:10px")
+					img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:cover;width:190px;height:150px;margin:10px")
