--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -2,9 +2,7 @@ extends layout
 
 block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
-		a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
-			i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
-		h1.col.xs-10 Youtube Entity Extraction
+		h1.col.xs-10 Entity Extraction
 	h3(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
 	div.searchpanel.col-xs-12(style="margin-bottom:40px;")
 		form.search-form.col.xs-12(action="/search", method="post",style="margin-left:25px")
