--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -4,12 +4,12 @@ block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
 		h1.col.xs-10 Entity Extraction
 	h3(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
-	div.searchpanel.col-xs-12(style="margin-bottom:40px;")
+	div.searchpanel.col-xs-12(style="margin-bottom:40px;padding:0px")
 		form.search-form.col.xs-12(action="/search", method="post",style="margin-left:25px")
 			span.col.xs-12
-				input.search-box.form-control.typeahead.col-xs-11(type="text", placeholder="Search For Tags or Transcript", value=search_query, required="required" name='search_query',style="width:50%;")
+				input.search-box.form-control.typeahead.col-xs-11(type="text", placeholder="Search For Tags or Transcript", value=search_query, required="required" name='search_query',style="width:30%;")
 				| &nbsp;
-				input.col-xs-1(type="submit", value="Search",style="padding:5px;")
+				input.col-xs-1(type="submit", value="Search",style="padding:6px;background-color: #5bc0de;color: #FFFFFF;")
 				i.fa.fa-times(aria-hidden='true')(style="font-size: 20px;left: -140px;position: relative;top: 5px;")(onClick="clearSearchText()")
 	h3(style="margin-left:25px;") Top Tags
 		|   &nbsp;&nbsp;&nbsp;
@@ -24,4 +24,4 @@ block content
 		each video in videos
 			span.col-xs-2
 				a(href='/showVideo/'+video.videoId)
-					img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:cover;width:190px;height:150px;margin:10px")
+					img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:contain;max-width:200px;margin:10px;border:1px solid red")
