Added logo on the main page

--- a/views/search.pug
+++ b/views/search.pug
@@ -2,17 +2,17 @@ extends layout
 	
 block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
-		a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
-			i.fa.fa-home(aria-hidden='true')(style="font-size:30px")
-		h1.col.xs-10 Youtube Entity Extraction	
+		a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px;max-width:60px")
+			i.fa.fa-home(aria-hidden='true')(style="font-size:30px;")
+		h1.col.xs-10 Entity Extraction	
 	h3(style="margin-bottom:30px;margin-top:100px;margin-left:50px") Search Results for #{term}:
 	div#searchMain
 		each link in links
 			div.videofetch.col-xs-12(style="background-color:#D3D3D3;margin-bottom:10px;padding:0px")
 					div.videoResult.col-xs-2(style="padding:0px")
 						img.className#IdName(src=link.thumbnail,alt="Image Title",style="max-width:140px;object-fit:contain")
-					div.videoTitle.col-xs-7(style="padding-left:0px")
-						a(style='line-height:50px;font-size:20px;color:#000000;margin-left:20px;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
+					div.videoTitle.col-xs-8(style="padding-left:0px")
+						a(style='line-height:50px;font-size:20px;color:#000000;text-decoration:none')(href="https://www.youtube.com/watch?v="+link.videoId target="_blank") #{link.title}
 						br
 					div.dropdown.col-xs-1(style="margin-top:25px")
 						span.transcriptloader
