--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -1,9 +1,10 @@
 extends layout
 
 block content
-	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
-		h1.col.xs-10 Entity Extraction
-	h3(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
+	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;padding:10px")
+		img.col-xs-2(src="https://www.thecube.net/images/thecube-collapsed-logo.png",alt="Image Title",style="object-fit:contain;max-width:100px")
+		h1.col-xs-10(style="margin-top:10px") Entity Extraction
+	h3.col-xs-12(style="margin-left:25px;margin-top:100px") Search for Tags Or Transcript:
 	div.searchpanel.col-xs-12(style="margin-bottom:40px;padding:0px")
 		form.search-form.col.xs-12(action="/search", method="post",style="margin-left:25px")
 			span.col.xs-12
