infinite paginatio at main page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,7 @@ html
     script(src="//cdnjs.cloudflare.com/ajax/libs/h5Validate/0.8.4/jquery.h5validate.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.1.6/ZeroClipboard.min.js")
     script(src="/js/search.js")
+    script(src="/js/mainpage.js")
     title= title
   body
     block content
