--- a/views/mainPage.pug
+++ b/views/mainPage.pug
@@ -28,4 +28,4 @@ block content
 			each video in videos
 				span.col-xs-2
 					a(href='/showVideo/'+video.videoId)
-						img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:cover;width:190px;height:150px;margin:10px")
+						img(src=video.thumbnail alt="'+video.title+'")(style="object-fit:contain;width:200px;margin:10px;border:1px solid red")
