--- a/views/search.pug
+++ b/views/search.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block scripts
-	script(src="/js/search.js")	
+	script(src="/js/search.js")
 block content
 	div.topBar.col-xs-12(style="background-color:#A0E6F6;position: absolute;top:0;left:0;right:0;")
 		a.col-xs-1(href='/',style="padding-right:0px;margin-top:20px")
@@ -40,3 +40,5 @@ block content
 							each tag in link.entities
 								a(href='/searchVideoByTag/'+tag)
 									li.col-xs-3 #{tag}
+		div.viewAll(style="float:right;margin-right:40px")
+			botton.btn.btn-info(onClick="showNextResults('"+ term +"')") View All Results
