search page pagination changes

--- a/views/search.pug
+++ b/views/search.pug
@@ -41,4 +41,4 @@ block content
 								a(href='/searchVideoByTag/'+tag)
 									li.col-xs-3 #{tag}
 		div.viewAll(style="float:right;margin-right:40px")
-			botton.btn.btn-info(onClick="showNextResults('"+ term +"')") View All Results
+			botton.btn.btn-info(onClick="showNextResults('"+ term +"')") View More Results
